# edge_detector

./: CMakeLists.txt  README.md  Section_1_Answers.txt  coins.cfg
lib/: binaryMaskEstimator.hh  objectCounter.hh
src/: binaryMaskEstimator.cpp  main.cpp  objectCounter.cpp
